--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,6 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
     android:orientation="vertical">
+
+    <EditText
+        android:id="@+id/EditTextUid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:ems="10"
+        tools:context=".MainActivity" >
+
+        <requestFocus />
+    </EditText>
 	
 	<TextView
         android:id="@+id/text01" 
