--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,98 +1,92 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:orientation="vertical">
-	
-	<TextView
-        android:id="@+id/text01" 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="사용자"
-        tools:context=".MainActivity" />
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".MainActivity" >
+
     <EditText
-        android:id="@+id/edittext01" 
-        android:layout_width="wrap_content"
+        android:id="@+id/edittext01"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        tools:context=".MainActivity" />
-    
-    <TextView
-        android:id="@+id/text02" 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="방이름"
-        tools:context=".MainActivity" />
+        android:ems="10"
+        android:hint="사용자 ID"
+        tools:context=".MainActivity" >
+
+        <requestFocus />
+    </EditText>
+
     <EditText
-        android:id="@+id/edittext02" 
-        android:layout_width="wrap_content"
+        android:id="@+id/edittext02"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:ems="10"
+        android:hint="방 ID"
         tools:context=".MainActivity" />
-    
-   
-   <Button
-        android:id="@+id/button01" 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="사용자생성"
-        tools:context=".MainActivity" />
-   
-    <Button
-        android:id="@+id/button02" 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="입장"
-        tools:context=".MainActivity" />
-   
-   
-   <TextView
-        android:id="@+id/textview01" 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        
-         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/button01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="0.15"
+            android:text="사용자생성"
+            tools:context=".MainActivity" />
+        <Button
+            android:id="@+id/button02"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="입장"
+            tools:context=".MainActivity" />
+
+
+    </LinearLayout>
+
+    <fragment
+        android:id="@+id/gMap"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        class="com.google.android.gms.maps.SupportMapFragment" />
+
     <TextView
-        android:id="@+id/textview02" 
+        android:id="@+id/textview01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        
-        />
-     <TextView
-        android:id="@+id/textview03" 
+        android:layout_margin="10dp" />
+
+    <TextView
+        android:id="@+id/textview02"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        
-         />
-      <TextView
-        android:id="@+id/textview04" 
+        android:layout_margin="10dp" />
+
+    <TextView
+        android:id="@+id/textview03"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        
-         />
-       <TextView
-        android:id="@+id/textview05" 
+        android:layout_margin="10dp" />
+
+    <TextView
+        android:id="@+id/textview04"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        
-         />
-   
-        
-       
-   
-   
-   
-   
-    
-     
+        android:layout_margin="10dp" />
+
+    <TextView
+        android:id="@+id/textview05"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp" />
 
 </LinearLayout>
