--- a/res/layout/ui_fragment_main.xml
+++ b/res/layout/ui_fragment_main.xml
@@ -27,7 +27,7 @@
         android:layout_below="@+id/title"
         android:layout_marginTop="88dp"
         android:ems="10"
-         />
+        android:text="test" />
 
     <TextView
         android:id="@+id/num"
