--- a/res/layout/contest.xml
+++ b/res/layout/contest.xml
@@ -28,21 +28,21 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/t_user"
-        android:layout_below="@+id/t_user"
-        android:layout_marginTop="22dp"
-        android:src="@drawable/sicssor" />
-
-    <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageView1"
         android:layout_below="@+id/t_enemy"
-        android:layout_marginTop="22dp"
-        android:src="@drawable/rock" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="18dp"
+        android:src="@drawable/btn_rock" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/imageView2"
+        android:layout_below="@+id/t_user"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/btn_scissor" />
 
 </RelativeLayout>
