--- a/res/layout/ui_fragment_main.xml
+++ b/res/layout/ui_fragment_main.xml
@@ -2,58 +2,101 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.wearetherunningman.UIMainActivity$PlaceholderFragment" >
+    tools:context="com.example.wearetherunningman.MainActivity$PlaceholderFragment" >
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/sub_title"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="82dp"
         android:text="Running Man"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFF"
         android:textSize="40sp" />
 
-    <EditText
-        android:id="@+id/put_num"
+    <TextView
+        android:id="@+id/sub_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/title"
-        android:layout_below="@+id/title"
-        android:layout_marginTop="88dp"
-        android:ems="10"
-         />
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="15dp"
+        android:layout_toLeftOf="@+id/txt_enter"
+        android:text="We Are The"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="#FFFF" />
 
     <TextView
         android:id="@+id/num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/put_num"
         android:layout_alignLeft="@+id/put_num"
-        android:layout_marginBottom="46dp"
-        android:text="방 이름" />
+        android:layout_below="@+id/imageView1"
+        android:text="인증번호"
+        android:textColor="#FFFF" />
 
-    <Button
-        android:id="@+id/enter"
+    <EditText
+        android:id="@+id/put_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/how"
+        android:layout_below="@+id/num"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="28dp"
-        android:text="Enter" />
+        android:ems="10"
+        android:inputType="numberSigned" />
 
-    <Button
+    <ImageButton
         android:id="@+id/how"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/enter"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"
-        android:text="How to" />
+        android:layout_marginTop="21dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/main_btn" />
+
+    <TextView
+        android:id="@+id/txt_how"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/how"
+        android:layout_marginTop="14dp"
+        android:layout_toRightOf="@+id/sub_title"
+        android:text="사용방법"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFF" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/logo" />
+
+    <ImageButton
+        android:id="@+id/enter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/how"
+        android:layout_below="@+id/put_num"
+        android:layout_marginTop="28dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/main_btn" />
+
+    <TextView
+        android:id="@+id/txt_enter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/enter"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="14dp"
+        android:text="참가하기"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFF" />
 
 </RelativeLayout>
