--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -31,22 +31,16 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="#FFFF" />
 
-    <TextView
-        android:id="@+id/num"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/put_num"
-        android:layout_below="@+id/imageView1"
-        android:text="인증번호"
-        android:textColor="#FFFF" />
-
     <EditText
         android:id="@+id/put_num"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/num"
+        android:layout_below="@+id/imageView1"
         android:layout_centerHorizontal="true"
-        android:ems="10" />
+        android:ems="13"
+        android:hint="방 이름을 입력하세요."
+        android:textColor="#FFF"
+        android:textColorHint="#EEE" />
 
     <ImageButton
         android:id="@+id/how"
