--- a/res/drawable-hdpi/dialog_bluebtn.xml
+++ b/res/drawable-hdpi/dialog_bluebtn.xml
@@ -5,6 +5,16 @@
         android:state_pressed="true"
         android:drawable="@drawable/btn_bluepressed" />
     <item
+        android:state_pressed="true"
+        android:state_checked="true"
+        android:drawable="@drawable/btn_blue" />
+
+    <item
+        android:state_checked="true"
+        android:drawable="@drawable/btn_bluepressed" />
+    
+    <item
         android:state_pressed="false"
         android:drawable="@drawable/btn_blue" />
+
     </selector>
