--- a/res/layout/dialog.xml
+++ b/res/layout/dialog.xml
@@ -42,21 +42,28 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
-                <ImageButton
+                <RadioButton
                     android:id="@+id/b_red"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:layout_marginLeft="10dp"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/dialog_redbtn" />
+                    android:background="@drawable/dialog_redbtn"
+                    android:button="@null"
+                    android:checked="false"
+                    android:gravity="center" />
 
-                <ImageButton
+                 <RadioButton
                     android:id="@+id/b_blue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/dialog_bluebtn" />
+                    android:layout_weight="1"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/dialog_bluebtn"
+                    android:checked="false"
+                    android:button="@null"
+                    android:gravity="center" />
+                 
             </RadioGroup>
         </LinearLayout>
 
@@ -77,33 +84,41 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
-                <ImageButton
+                <RadioButton
                     android:id="@+id/b_scissor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:layout_marginLeft="20dp"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/btn_scissor" />
-
-                <ImageButton
+                    android:background="@drawable/dialog_scissorbtn"
+                    android:button="@null"
+                    android:checked="false"
+                    android:gravity="center" />
+                
+                <RadioButton
                     android:id="@+id/b_rock"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:layout_marginLeft="17dp"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/btn_rock" />
-
-                <ImageButton
+                    android:background="@drawable/dialog_rockbtn"
+                    android:button="@null"
+                    android:checked="false"
+                    android:gravity="center" />
+               
+                <RadioButton
                     android:id="@+id/b_paper"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:layout_marginLeft="17dp"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/btn_paper" />
+                    android:background="@drawable/dialog_paperbtn"
+                    android:button="@null"
+                    android:checked="false"
+                    android:gravity="center" />
 
             </RadioGroup>
         </LinearLayout>
-
     </LinearLayout>
 
 </RelativeLayout>
