--- a/res/layout/fragment_game.xml
+++ b/res/layout/fragment_game.xml
@@ -1,28 +1,52 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.wearetherunningman.GameActivity$PlaceholderFragment" >
-    
-    
-      <TextView
-            android:id="@+id/nameview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-             />
-    
-     <TextView
-            android:id="@+id/t_roomview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-             />
 
     <fragment
         android:id="@+id/gMap"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         class="com.google.android.gms.maps.SupportMapFragment" />
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="14dp"
+        android:src="@drawable/btn_user" /><TextView
+        android:id="@+id/textView1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:includeFontPadding="false"
+        android:shadowColor="#FF464646"
+        android:shadowDx="1.0"
+        android:shadowDy="1.0"
+        android:shadowRadius="1.0"
+        android:text="해요니 님"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FFFF"
+        android:textStyle="bold" />
 
-</LinearLayout>
+        <ImageButton
+            android:id="@+id/imageButton1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="30dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/btn_menu" />
+
+</RelativeLayout>
