--- a/res/layout/contest.xml
+++ b/res/layout/contest.xml
@@ -5,44 +5,44 @@
     android:layout_height="match_parent"
     tools:context=".GameActivity" >
 
-    <TextView
-        android:id="@+id/t_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="89dp"
-        android:layout_marginTop="22dp"
-        android:text="나의 무기"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
-        android:id="@+id/t_enemy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/t_user"
-        android:layout_marginLeft="75dp"
-        android:layout_marginTop="144dp"
-        android:text="상대방의 무기"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/t_enemy"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
+        android:layout_alignLeft="@+id/t_enemy"
+        android:layout_alignTop="@+id/imageView1"
+        android:layout_marginLeft="20dp"
         android:src="@drawable/btn_rock" />
 
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageView2"
         android:layout_below="@+id/t_user"
+        android:layout_marginRight="46dp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/btn_scissor" />
+        android:layout_toLeftOf="@+id/imageView2"
+        />
+
+    <TextView
+        android:id="@+id/t_enemy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/imageView1"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:text="상대방의 무기"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/t_user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="31dp"
+        android:layout_marginTop="22dp"
+        android:layout_toLeftOf="@+id/t_enemy"
+        android:text="나의 무기"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
