--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -92,4 +92,21 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#FFF" />
 
+    <ImageButton
+        android:id="@+id/web"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="17dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/main_btn" />
+
+    <WebView
+        android:id="@+id/webview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+       
+        android:layout_marginTop="50dp" />
+
 </RelativeLayout>
