--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -6,29 +6,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/main"
     tools:context="com.example.wearetherunningman.MainActivity$PlaceholderFragment" >
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/sub_title"
-        android:layout_centerHorizontal="true"
-        android:text="Running Man"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#FFF"
-        android:textSize="40sp" />
-
-    <TextView
-        android:id="@+id/sub_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="15dp"
-        android:layout_toLeftOf="@+id/txt_enter"
-        android:text="We Are The"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="#FFFF" />
 
     <EditText
         android:id="@+id/put_num"
@@ -41,27 +20,6 @@
         android:text="test"
         android:textColor="#FFF"
         android:textColorHint="#EEE" />
-
-    <ImageButton
-        android:id="@+id/how"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/enter"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/main_btn" />
-
-    <TextView
-        android:id="@+id/txt_how"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/how"
-        android:layout_marginTop="14dp"
-        android:layout_toRightOf="@+id/sub_title"
-        android:text="사용방법"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#FFF" />
 
     <ImageView
         android:id="@+id/imageView1"
@@ -78,6 +36,7 @@
         android:layout_alignLeft="@+id/how"
         android:layout_below="@+id/put_num"
         android:layout_marginTop="28dp"
+        android:layout_gravity="center"
         android:background="@android:color/transparent"
         android:src="@drawable/main_btn" />
 
@@ -92,20 +51,74 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#FFF" />
 
+    <TextView
+        android:id="@+id/sub_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/put_num"
+        android:layout_alignParentTop="true"
+        android:text="We Are The"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="#FFFF" />
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/sub_title"
+        android:layout_centerHorizontal="true"
+        android:text="Running Man"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFF"
+        android:textSize="40sp" />
+
+    <ImageButton
+        android:id="@+id/how"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/enter"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="14dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/main_btn" />
+
+    <TextView
+        android:id="@+id/txt_how"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/txt_enter"
+        android:layout_alignTop="@+id/how"
+        android:layout_marginTop="14dp"
+        android:text="사용방법"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFF" />
+
     <ImageButton
         android:id="@+id/web"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="17dp"
+        android:layout_alignLeft="@+id/how"
+        android:layout_below="@+id/how"
+        android:layout_marginTop="16dp"
         android:background="@android:color/transparent"
         android:src="@drawable/main_btn" />
+
+    <TextView
+        android:id="@+id/txt_web"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/web"
+        android:layout_alignLeft="@+id/txt_how"
+        android:layout_marginBottom="14dp"
+        android:text="방만들기"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#FFF" />
 
     <WebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" />
 
 </RelativeLayout>
