--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -2,20 +2,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main"
+
+            android:background="@drawable/main"
     tools:context="com.example.wearetherunningman.MainActivity$PlaceholderFragment" >
 
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="match_parent"
+        android:fillViewport="true" >
 
         <RelativeLayout
             android:id="@+id/content_wrap"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/main"
+            android:layout_height="fill_parent"
             android:orientation="vertical"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
