--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -31,6 +31,7 @@
                 android:ems="13"
                 android:hint="방 이름을 입력하세요."
                 android:text="test"
+                android:singleLine="true"
                 android:textColor="#FFF"
                 android:textColorHint="#EEE" />
 
